增加response_doc_gen.py工具来生成接口中对象描述，规避go swagger解析泛型出错问题
